src/test/deca/context/invalid/created/object/equals_int_boolean.deca
// Description :
//    test equals entre un int et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11:  (3.71) Le membre gauche n'est pas de type 'class'
class A{}
{
int a;
boolean b;
int c = a.equals(b);
}
